# Phase-Transition-Model

./: CMakeLists.txt
src/: HelperFunctions.c  Lattice.c  Parameters.c  Plots.c  Random.c  Sim.c  UnitCellTemplate.c  pbPlots.c  simulation  supportLib.c  test.c
src/include/: Definitions.h  HelperFunctions.h  Lattice.h  Parameters.h  Plots.h  Random.h  UnitCellTemplate.h  tests.h
